--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
   "description": "Stupid worms like but goats instead game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.js --timeout 30000"
   },
   "author": "Vadim Gut",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mocha": "^6.2.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "uuid": "^3.3.3"
   }
 }
